oem-config (1.3) UNRELEASED; urgency=low

  * Import subprocess in console-setup component (closes: Malone #60409).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 15 Sep 2006 09:39:02 +0100

oem-config (1.2) edgy; urgency=low

  * Merge from ubiquity:
    - Move from kbd-chooser to console-setup
      (https://launchpad.net/distros/ubuntu/+spec/sane-installer-keyboard).
      We still need to add a UI element for the keyboard variant, and
      translations of layout and variant names are missing, but it mostly
      seems to work.
    - Strip Fonts and Keyboard directories from our copy of console-setup;
      they're very large, and not needed since we don't actually build
      console-setup, but just copy a few scripts from it.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  7 Sep 2006 20:33:41 +0100

oem-config (1.1) edgy; urgency=low

  * Merge KDE frontend from Anirudh Ramesh.
  * Automatic update of included source packages: kbd-chooser 1.30ubuntu1,
    localechooser 1.20ubuntu6, tzsetup 1:0.10ubuntu2, user-setup 1.2ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue,  5 Sep 2006 17:24:33 +0100

oem-config (1.0) edgy; urgency=low

  * Reorganise oem-config to have a reasonable frontend/backend separation,
    thereby allowing for a future KDE port. This involved updating much of
    the core to look more like ubiquity (since ubiquity's core was an
    evolution of oem-config's), and a new UI using a single window/notebook
    rather than a succession of dialogs.
  * Casualties of this work include the whole base-config-like menu
    structure and the include/exclude mechanism. The menu structure made it
    difficult to avoid spawning a new dialog for each step, which was a poor
    UI; I don't believe the include/exclude mechanism was heavily used, but
    contact me if you were relying on it and it may be possible to restore
    it in a new form.
  * I haven't yet ported the new i18n infrastructure from ubiquity, so the