@@ -43,14 +43,11 @@ class Language(FilteredCommand):
         self.restart = False
         self.preparing = True
 
-        try:
-            current_language = self.db.get('languagechooser/language-name')
-        except debconf.DebconfError:
-            current_language = ''
-        if current_language:
-            current_language = re.sub(r'.*? *- (.*)', r'\1', current_language)
-        else:
-            current_language = 'English'
+        # Get index of untranslated value; we'll map this to the
+        # translated value later.
+        current_language_index = self.value_index(
+            'languagechooser/language-name')
+        current_language = 'English'
 
         language_choices = self.split_choices(
             unicode(self.db.metaget('languagechooser/language-name',
@@ -75,6 +72,8 @@ class Language(FilteredCommand):
             if choice_c not in language_codes:
                 continue
             language_display_map[choice] = (choice_c, language_codes[choice_c])
+            if i == current_language_index:
+                current_language = choice
 
         def compare_choice(x, y):
             result = cmp(language_display_map[x][1],
