@@ -1,6 +1,7 @@
 oem-config (1.3) UNRELEASED; urgency=low
 
   * Import subprocess in console-setup component (closes: Malone #60409).
+  * Fix language name handling (closes: Malone #60410).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 15 Sep 2006 09:39:02 +0100
 
